Improve BeginTx to create Ôrder and Add Swag to Order Handler
