# internal/dto/order.go
@@ -2,16 +2,17 @@ package dto
 
 import "time"
 
+// Order Request Create
 type CreateOrderRequest struct {
-	UserID int64             `json:"user_id" `
+	UserID int64             `json:"-"` //user_id get from token, not required in request body
 	Items  []CreateOrderItem `json:"items" binding:"required,dive"`
 }
 
+// Order Request Create Item
 type CreateOrderItem struct {
-	ProductID int64    `json:"product_id" binding:"required"`
-	Quantity  int      `json:"quantity" binding:"required,gt=0"`
-	Price     float64  `json:"price" binding:"omitempty"` //price get in service layer, not required in request body
-	Product   *Product `json:"product,omitempty"`         // product name, get in service layer, not required in request body
+	ProductID int64   `json:"product_id" binding:"required"`
+	Quantity  int     `json:"quantity" binding:"required,gt=0"`
+	Price     float64 `json:"-" binding:"omitempty"` //price get in service layer, not required in request body
 }
 
 // Response struct for create order
@@ -23,8 +24,17 @@ type CreateOrderResponse struct {
 	Items       []CreateOrderItem `json:"items"`
 }
 
+// Response struct for Order
+type OrderResponse struct {
+	ID          int64               `json:"id"`
+	UserID      int64               `json:"user_id"`
+	OrderDate   time.Time           `json:"order_date,omitempty"`
+	TotalAmount float64             `json:"total_amount"`
+	Items       []OrderItemResponse `json:"items"`
+}
+
 type GetOrdersResponse struct {
-	Orders []CreateOrderResponse `json:"orders"`
+	Orders []OrderResponse `json:"orders"`
 }
 
 type OrderActivityResponse struct {
