# internal/handler/order.handler.go
@@ -32,6 +32,20 @@ func (h *OrderHandler) RegisterOrderRoutes(r *gin.Engine) {
 	orderGroup.GET("/:id", h.GetOrderByID)
 }
 
+// CreateOrder handles the creation of a new order
+// @Summary Create a new order
+// @Description Create a new order for the authenticated user
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param order body dto.CreateOrderRequest true "Order details"
+// @security     BearerAuth
+// @Param authorization header string true "Bearer token"
+// @Success 200 {object} pkg.SuccessResponseSwag{data=dto.GetOrdersResponse}
+// @Failure 400 {object} pkg.ErrorResponseSwag
+// @Failure 401 {object} pkg.ErrorResponseSwag
+// @Failure 500 {object} pkg.ErrorResponseSwag
+// @Router /orders [post]
 func (h *OrderHandler) CreateOrder(c *gin.Context) {
 	// Implement logic to create a new order
 	userID := c.GetInt64("user_id")
@@ -57,6 +71,18 @@ func (h *OrderHandler) CreateOrder(c *gin.Context) {
 	c.JSON(http.StatusOK, pkg.SuccessResponse(order))
 }
 
+// GetOrdersByUserID handles retrieving orders for the authenticated user
+// @Summary Get orders for authenticated user
+// @Description Retrieve all orders for the authenticated user
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @security     BearerAuth
+// @Success 200 {object} pkg.SuccessResponseSwag{data=dto.OrderResponse}
+// @Failure 401 {object} pkg.ErrorResponseSwag
+// @Failure 404 {object} pkg.ErrorResponseSwag
+// @Failure 500 {object} pkg.ErrorResponseSwag
+// @Router /orders [get]
 func (h *OrderHandler) GetOrdersByUserID(c *gin.Context) {
 	// Implement logic to retrieve orders by user ID
 	userID := c.GetInt64("user_id")
@@ -82,6 +108,20 @@ func (h *OrderHandler) GetOrdersByUserID(c *gin.Context) {
 	c.JSON(http.StatusOK, pkg.SuccessResponse(orders))
 }
 
+// GetOrderByID handles retrieving order details by order ID
+// @Summary Get order details by order ID
+// @Description Retrieve order details for the specified order ID
+// @Tags Orders
+// @Accept json
+// @Produce json
+// @Param id path int true "Order ID"
+// @security     BearerAuth
+// @Success 200 {object} pkg.SuccessResponseSwag{data=dto.OrderResponse}
+// @Failure 400 {object} pkg.ErrorResponseSwag
+// @Failure 401 {object} pkg.ErrorResponseSwag
+// @Failure 404 {object} pkg.ErrorResponseSwag
+// @Failure 500 {object} pkg.ErrorResponseSwag
+// @Router /orders/{id} [get]
 func (h *OrderHandler) GetOrderByID(c *gin.Context) {
 	// Implement logic to retrieve order details by order ID
 	orderID, err := strconv.ParseInt(c.Param("id"), 10, 64)
